--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <h1>FX Trading App</h1>
+    <div id="root"></div>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
